FIX: adds min-height to html/body so that elements are not cut off when searching, removes unnecessary div

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,7 @@
 body, html {
   overflow-x: hidden;
   position: relative;
+  min-height: 100vh;
 }
 
 .hero-container {
